# olist-frontend-simulator

./: .gitignore  Dockerfile  Makefile  app.py  docker-compose.yml  pyproject.toml  settings.toml
frontend_simulator/: config.py  fetcher.py
frontend_simulator/processor/: __init__.py  order_items.py  order_review.py  orders.py
frontend_simulator/producers/: .base_producer.py.swp  .simulate.py.swp  base_producer.py  simulate.py
