[tool.poetry]
name = "olist-frontend-simulator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pyproject-toml = "^0.0.11"
pylint = "^2.17.4"
tomli = "^2.0.1"
toml = "^0.10.2"
dynaconf = "^3.1.12"
confluent-kafka = "^2.1.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
